--- a/trunk/cwinux/example/echo_protobuf/echo_channel_svr/Makefile.in
+++ b/trunk/cwinux/example/echo_protobuf/echo_channel_svr/Makefile.in
@@ -53,7 +53,8 @@ am_cwx_echo_channel_OBJECTS =  \
 	cwx_echo_channel-CwxEchoChannelApp.$(OBJEXT) \
 	cwx_echo_channel-CwxEchoChannelConfig.$(OBJEXT) \
 	cwx_echo_channel-cwx_echo_channel.$(OBJEXT) \
-	cwx_echo_channel-CwxEchoChannelEventHandler.$(OBJEXT)
+	cwx_echo_channel-CwxEchoChannelEventHandler.$(OBJEXT) \
+	cwx_echo_channel-echo.pb.$(OBJEXT)
 cwx_echo_channel_OBJECTS = $(am_cwx_echo_channel_OBJECTS)
 cwx_echo_channel_DEPENDENCIES =
 DEFAULT_INCLUDES = -I. -I$(srcdir)
@@ -107,7 +108,7 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
-LIBS = -lcwxapp -lcwxnet -lcwxcmn -lz -lpthread -ldl -lrt
+LIBS = -lcwxapp -lcwxnet -lcwxcmn -lprotobuf -lz -lpthread -ldl -lrt
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
@@ -166,6 +167,7 @@ mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
+protobuf_dir = @protobuf_dir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
@@ -173,14 +175,14 @@ target_alias = @target_alias@
 pkgconfigdir = 
 BUILD_DATE = $(shell date +%F)
 cwx_echo_channel_CPPFLAGS = -D_BUILD_DATE="$(BUILD_DATE)" -W -Wall
-cwx_echo_channel_SOURCES = CwxEchoChannelApp.cpp  CwxEchoChannelConfig.cpp  cwx_echo_channel.cpp  CwxEchoChannelEventHandler.cpp
+cwx_echo_channel_SOURCES = CwxEchoChannelApp.cpp  CwxEchoChannelConfig.cpp  cwx_echo_channel.cpp  CwxEchoChannelEventHandler.cpp ../protobuf/echo.pb.cc
 cwx_echo_channel_LDADD = 
 cwx_echo_channel_LDFLAGS = -L@cwinux_dir@/lib
-INCLUDES = -I@cwinux_dir@/include/app -I@cwinux_dir@/include/cmn -I@cwinux_dir@/include/net
+INCLUDES = -I@cwinux_dir@/include/app -I@cwinux_dir@/include/cmn -I@cwinux_dir@/include/net -I@protobuf_dir@
 all: all-am
 
 .SUFFIXES:
-.SUFFIXES: .cpp .lo .o .obj
+.SUFFIXES: .cc .cpp .lo .o .obj
 $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
@@ -252,22 +254,23 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo_channel-CwxEchoChannelConfig.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo_channel-CwxEchoChannelEventHandler.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo_channel-cwx_echo_channel.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo_channel-echo.pb.Po@am__quote@
 
-.cpp.o:
+.cc.o:
 @am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
 @am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ $<
 
-.cpp.obj:
+.cc.obj:
 @am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ `$(CYGPATH_W) '$<'`; \
 @am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ `$(CYGPATH_W) '$<'`
 
-.cpp.lo:
+.cc.lo:
 @am__fastdepCXX_TRUE@	if $(LTCXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
 @am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Plo"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
@@ -329,6 +332,41 @@ cwx_echo_channel-CwxEchoChannelEventHandler.obj: CwxEchoChannelEventHandler.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxEchoChannelEventHandler.cpp' object='cwx_echo_channel-CwxEchoChannelEventHandler.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_channel_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo_channel-CwxEchoChannelEventHandler.obj `if test -f 'CwxEchoChannelEventHandler.cpp'; then $(CYGPATH_W) 'CwxEchoChannelEventHandler.cpp'; else $(CYGPATH_W) '$(srcdir)/CwxEchoChannelEventHandler.cpp'; fi`
+
+cwx_echo_channel-echo.pb.o: ../protobuf/echo.pb.cc
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_channel_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo_channel-echo.pb.o -MD -MP -MF "$(DEPDIR)/cwx_echo_channel-echo.pb.Tpo" -c -o cwx_echo_channel-echo.pb.o `test -f '../protobuf/echo.pb.cc' || echo '$(srcdir)/'`../protobuf/echo.pb.cc; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo_channel-echo.pb.Tpo" "$(DEPDIR)/cwx_echo_channel-echo.pb.Po"; else rm -f "$(DEPDIR)/cwx_echo_channel-echo.pb.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../protobuf/echo.pb.cc' object='cwx_echo_channel-echo.pb.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_channel_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo_channel-echo.pb.o `test -f '../protobuf/echo.pb.cc' || echo '$(srcdir)/'`../protobuf/echo.pb.cc
+
+cwx_echo_channel-echo.pb.obj: ../protobuf/echo.pb.cc
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_channel_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo_channel-echo.pb.obj -MD -MP -MF "$(DEPDIR)/cwx_echo_channel-echo.pb.Tpo" -c -o cwx_echo_channel-echo.pb.obj `if test -f '../protobuf/echo.pb.cc'; then $(CYGPATH_W) '../protobuf/echo.pb.cc'; else $(CYGPATH_W) '$(srcdir)/../protobuf/echo.pb.cc'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo_channel-echo.pb.Tpo" "$(DEPDIR)/cwx_echo_channel-echo.pb.Po"; else rm -f "$(DEPDIR)/cwx_echo_channel-echo.pb.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../protobuf/echo.pb.cc' object='cwx_echo_channel-echo.pb.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_channel_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo_channel-echo.pb.obj `if test -f '../protobuf/echo.pb.cc'; then $(CYGPATH_W) '../protobuf/echo.pb.cc'; else $(CYGPATH_W) '$(srcdir)/../protobuf/echo.pb.cc'; fi`
+
+.cpp.o:
+@am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ $<
+
+.cpp.obj:
+@am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ `$(CYGPATH_W) '$<'`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Po"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXXCOMPILE) -c -o $@ `$(CYGPATH_W) '$<'`
+
+.cpp.lo:
+@am__fastdepCXX_TRUE@	if $(LTCXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/$*.Tpo" "$(DEPDIR)/$*.Plo"; else rm -f "$(DEPDIR)/$*.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='$<' object='$@' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(LTCXXCOMPILE) -c -o $@ $<
 
 mostlyclean-libtool:
 	-rm -f *.lo
